# IndexGuard

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.streamlit/: config.toml
apps/api/: main.py
apps/dashboard/: __init__.py  api_client.py  app.py  presentation.py  rag_chat.py  renderers.py  state.py
apps/dashboard/assets/: indexguard.css
data/documents/: business-trip-expense-kim-minji.md  company-compensation-policy.hwpx  customer-support-p1-case-202607.hwpx  customer-support-service-level.hwpx  demo-employee-salary.md  demo-salary-policy.md  employee-kim-chulsoo-compensation.md  expense-policy-demo.md  information-security-policy.md  leave-and-working-hours-policy.md  text.md  travel-and-purchase-policy.md  테스트.hwpx
data/evaluation/: risk_cases.json
docs/: API_CONTRACT.md  ARCHITECTURE.md  A_GATEWAY.md  HWPX_MVP.md  STRATEGY.md  TEAM_BRIEF.md
outputs/: IndexGuard_CODEGATE_2026.pptx  IndexGuard_CODEGATE_2026_revised.pptx
src/indexguard/: __init__.py  api.py  audit.py  change_queue.py  contracts.py  errors.py  git_watcher.py  integrity.py  mcp_server.py  openai_compat.py  operations.py  pipeline.py  product_pipeline.py  rag_chat_api.py  repository_review.py  risk_api.py  risk_client.py  risk_engine.py  risk_evaluation.py  scanner.py  security_policy.py  storage.py  watcher.py
src/indexguard/detectors/: __init__.py  document_diff.py
tests/: __init__.py  fixture_builders.py  test_audit_and_gate.py  test_change_queue.py  test_contracts.py  test_document_diff.py  test_extractors.py  test_git_watcher.py  test_mcp_server.py  test_openai_compat.py  test_opendataloader_pdf.py  test_operations.py  test_pipeline_api.py  test_product_pipeline.py  test_risk_api.py  test_risk_client.py  test_risk_dispatch_e2e.py  test_risk_engine.py  test_risk_evaluation.py  test_scanner.py  test_storage.py  test_watcher.py
tests/dashboard/: test_api_client.py  test_app.py  test_configuration.py  test_presentation.py  test_rag_chat.py  test_renderers.py  test_state.py
(+14 files in other folders)
